--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,19 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
 
+  font-family: "Crimson Text", serif;
+  line-height: 1.5;
   color: #222;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 article {
@@ -24,6 +32,8 @@ article {
 
 article h1 {
   font-weight: normal;
+  margin-bottom: 0;
+  line-height: 1.4;
 }
 
 article header {
@@ -32,6 +42,18 @@ article header {
 
 article header p {
   font-style: italic;
+  margin-top: 0;
+  margin-bottom: 1.3rem;
+  line-height: 1.2;
+}
+
+article p {
+  line-height: 1.3;
+  margin-top: 1.25rem;
+}
+
+article > p:nth-child(3) {
+  margin-top: 1.3rem;
 }
 
 article > p:last-child {
@@ -42,8 +64,27 @@ blockquote {
   max-width: 24em;
   color: #555;
   font-size: 1.125rem;
+  margin: 0;
 }
 
 .quote {
   color: #999;
+}
+
+@media only screen and (min-width: 38em) {
+
+
+
+}
+
+@media only screen and (min-width: 60em) {
+
+
+
+}
+
+@media only screen and (min-width: 90em) {
+
+
+
 }
