--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
   text-size-adjust: 100%;
 
   font-family: "Crimson Text", serif;
-  line-height: 1.5;
+  line-height: 1.3;
   color: #222;
 }
 
@@ -48,7 +48,6 @@ article header p {
 }
 
 article p {
-  line-height: 1.3;
   margin-top: 1.25rem;
 }
 
@@ -56,8 +55,24 @@ article > p:nth-child(3) {
   margin-top: 1.3rem;
 }
 
+article > p:nth-child(5) {
+  margin-top: 1.3rem;
+}
+
+article > p:nth-child(6) {
+  margin-top: 1.3rem;
+}
+
+article ol {
+  padding-left: 1rem;
+  margin-top: 1.3rem;
+}
+
 article > p:last-child {
   border-bottom: 1px solid #999;
+  margin-top: 1.3rem;
+  margin-bottom: 1.4rem;
+  padding-bottom: 1.3rem;
 }
 
 blockquote {
@@ -65,6 +80,7 @@ blockquote {
   color: #555;
   font-size: 1.125rem;
   margin: 0;
+  margin-top: 1.35rem;
 }
 
 .quote {
@@ -73,7 +89,49 @@ blockquote {
 
 @media only screen and (min-width: 38em) {
 
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
 
+  article h1 {
+    margin-top: 1.4rem;
+  }
+
+  article header p {
+    line-height: 1.4;
+    margin-bottom: 1.4rem;
+  }
+
+  article p {
+    margin-top: 1.4rem;
+  }
+
+  article > p:nth-child(3) {
+    margin-top: 1.4rem;
+  }
+
+  article > p:nth-child(5) {
+    margin-top: 1.4rem;
+  }
+
+  article > p:nth-child(6) {
+    margin-top: 1.4rem;
+  }
+
+  article ol {
+    margin-top: 1.4rem;
+  }
+
+  article > p:last-child {
+    margin-top: 1.4rem;
+    margin-bottom: 1.5rem;
+    padding-bottom: 1.4rem;
+  }
+
+  blockquote {
+  margin-left: 2.5rem;
+  }
 
 }
 
