--- a/css/main.css
+++ b/css/main.css
@@ -137,12 +137,105 @@ blockquote {
 
 @media only screen and (min-width: 60em) {
 
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
 
+  body {
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
+  }
+
+  article h1 {
+    margin-top: 1.6rem;
+  }
+
+  article header p {
+    line-height: 1.6;
+    margin-bottom: 1.45rem;
+  }
+
+  article p {
+    margin-top: 1.5rem;
+  }
+
+  article > p:nth-child(3) {
+    margin-top: 1.5rem;
+  }
+
+  article > p:nth-child(5) {
+    margin-top: 1.5rem;
+  }
+
+  article > p:nth-child(6) {
+    margin-top: 1.5rem;
+  }
+
+  article ol {
+    margin-top: 1.5rem;
+  }
+
+  article > p:last-child {
+    margin-top: 1.5rem;
+    margin-bottom: 1.6rem;
+    padding-bottom: 1.5rem;
+  }
+
+  blockquote {
+  margin-left: 6.5rem;
+  }
 
 }
 
 @media only screen and (min-width: 90em) {
 
+  html {
+    font-size: 130%;
+  }
 
+  body {
+    padding-left: 14.1rem;
+    padding-right: 8rem;
+  }
+
+  article h1 {
+    margin-top: 1.6rem;
+  }
+
+  article header p {
+    line-height: 1.6;
+    margin-bottom: 1.45rem;
+  }
+
+  article p {
+    margin-top: 1.5rem;
+  }
+
+  article > p:nth-child(3) {
+    margin-top: 1.5rem;
+  }
+
+  article > p:nth-child(5) {
+    margin-top: 1.5rem;
+  }
+
+  article > p:nth-child(6) {
+    margin-top: 1.5rem;
+  }
+
+  article ol {
+    margin-top: 1.5rem;
+  }
+
+  article > p:last-child {
+    margin-top: 1.5rem;
+    margin-bottom: 1.6rem;
+    padding-bottom: 1.5rem;
+  }
+
+  blockquote {
+  margin-left: 6.5rem;
+  }
 
 }
